# ptit-cpp

./: README.md  main.cpp
apex-banking/: CMakeLists.txt  DEMO_SCENARIO.md  Makefile  README.md  README_WEB.md
apex-banking/include/: Account.h  AuthService.h  Bank.h  BankService.h  Checking.h  Currency.h  Errors.h  Money.h  Savings.h  Transaction.h
apex-banking/src/: Account.cpp  AuthService.cpp  Bank.cpp  BankService.cpp  BankWebAccess.cpp  Checking.cpp  Currency.cpp  Money.cpp  Savings.cpp  Transaction.cpp  main.cpp  web_main.cpp
apex-banking/test/: test_account.cpp  test_bank.cpp  test_checking.cpp  test_currency.cpp  test_savings.cpp  test_smoke.cpp
docs/superpowers/plans/: 2026-04-21-apex-banking.md
docs/superpowers/specs/: 2026-04-21-apex-banking-design.md
